# sakanadb

./: README.md
.github/workflows/: go.yml
sakanakv/: .gitignore  README.md  server.cpp
sakanakv/src/: avltree.cpp  avltree.h  build.sh  client.cpp  hashmap.cpp  hashmap.h  hashtable.h  server.cpp  test_avl.cpp  zset.h
sakanakv2/: README.md  go.mod  server.go
sakanakv2/client/: client.go  go.mod  go.sum
sakanakv2/client/handler/: handler.go  handler_test.go
sakanakv2/client/tcp/: service.go
sakanakv2/server/: go.mod  go.sum  server.go
sakanakv2/server/command/: command.go  command_test.go  registry.go
sakanakv2/server/handler/: handler.go
sakanakv2/server/repository/: repository.go  repository_test.go
sakanakv2/server/tcp/: service_test.go
tickhouse/: .gitignore  AGENTS.md  README.md
tickhouse/docs/: design.md  plans.md  prd.md  testing.md
tickhouse/tickhouse/: pyproject.toml
tickhouse/tickhouse-repl/: pyproject.toml
tickhouse/tickhouse-repl/scripts/: prep_data.py
tickhouse/tickhouse-repl/src/tickhouse_repl/: __init__.py  protocol.py  repl.py
tickhouse/tickhouse-repl/tests/: test_copy.py  test_protocol.py
tickhouse/tickhouse/src/tickhouse/: __init__.py  parser.py  protocol.py  server.py  service.py
tickhouse/tickhouse/src/tickhouse/storage/: __init__.py  naive_columnar_table.py  parquet_table.py  table.py
tickhouse/tickhouse/tests/: test_naive_columnar_table.py  test_parquet_table.py  test_parser.py  test_service.py
