[project]
name = "tickhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wrewsama", email = "andrewlzs512@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tickhouse = "tickhouse:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
