[project]
name = "tickhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wrewsama", email = "andrewlzs512@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=19.0",
]

[project.scripts]
tickhouse = "tickhouse:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
